--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "\"C:\\Program Files\\nodejs\\node.exe\" node_modules/next/dist/bin/next dev",
-    "build": "\"C:\\Program Files\\nodejs\\node.exe\" node_modules/next/dist/bin/next build",
-    "start": "\"C:\\Program Files\\nodejs\\node.exe\" node_modules/next/dist/bin/next start",
-    "lint": "\"C:\\Program Files\\nodejs\\node.exe\" node_modules/next/dist/bin/next lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.1.0",
